syntax = "proto3";

package git;

message GitRepo {
  // The HTTPS URL of the Git repository that will be checked
  // out and built as part of this project.
  // Ex. "https://github.com/buildbuddy-io/buildbuddy-internal"
  string repo_url = 1;

  // The access token to use when cloning this repository.
  //
  // For Github, and Gitlab, this is known as a Personal Access Token.
  //
  // For Bitbucket, this is known as an App Password, which requires
  // an associated username. The app password requires the following
  // permissions: [webhooks: r+w, pull requests: r+w; repo: r+w]
  //
  // If omitted, this defaults to the access token for the linked
  // GitHub account, if the repo URL is a GitHub URL. Otherwise,
  // an error is returned.
  //
  // This is ignored if `use_system_git_credentials` if set.
  //
  // Ex. "ABASDBASDBASBD"
  string access_token = 2;

  // The username to use when cloning this repository.
  // This is required for Bitbucket, whose "app passwords" require an
  // associated username.
  string username = 3;

  // Whether to use github credentials configured on the system.
  //
  // By default, we require https for git operations and generate short-lived
  // access tokens using our github app installation.
  // If GitHub SSH access is already configured on the runners, set this
  // to true to skip doing that and use the configured auth.
  bool use_system_git_credentials = 4;
}

message RepoState {
  // SHA of the commit to be checked out. This happens before applying
  // any patches (see below). Takes preference over branch.
  // Ex. "e782592faf56da05cc0a243220689135e807958f"
  string commit_sha = 1;

  // Branch to be checked out. This happens before applying any patches
  // (see below). commit_sha takes preference, if specified.
  // Ex. "main"
  string branch = 3;

  // Any local patches that should be applied to the repo before
  // running the command. Patches will be applied using "git apply"
  // in the root directory of the repository.
  repeated bytes patch = 2;
}
